--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,111 @@
-.container {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.grid-container {
+    background-color: darkslategrey;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 10px auto;
+    max-width: 400px;
     display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-row-gap: 8px;
+    grid-template-areas:
+        "grid-dis grid-dis grid-dis grid-dis"
+        "grid-dis grid-dis grid-dis grid-dis"
+        "grid-clr .        .        grid-back"
+        "grid-7   grid-8   grid-9   grid-div"
+        "grid-4   grid-5   grid-6   grid-mul"
+        "grid-1   grid-2   grid-3   grid-sub"
+        "grid-0   grid-dec grid-eql grid-add";
+}
+
+.button {
+    height: 80px;
+    width: 90px;
+    font-size: 2.5em;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    color: rgb(39, 38, 38);
+}
+
+.grid-dis {
+    grid-area: grid-dis;
+    display: flex;
+    justify-self: stretch;
+    justify-content: right;
+    align-items: center;
+    padding: 20px;
+    font-size: 64px;
+    background-color: black;
+    border-radius: 10px;
+    color: rgb(198, 221, 221);
+    font-family: 'Space Mono', monospace;
+}
+
+.grid-clr {
+    grid-area: grid-clr;
+}
+
+.grid-bck {
+    grid-area: grid-back;
+    padding-bottom: 16px;
+}
+
+.grid-9 {
+    grid-area: grid-9;
+}
+.grid-8 {
+    grid-area: grid-8;
+}
+.grid-7 {
+    grid-area: grid-7;
+}
+.grid-6 {
+    grid-area: grid-6;
+}
+.grid-5 {
+    grid-area: grid-5;
+}
+.grid-4 {
+    grid-area: grid-4;
+}
+.grid-3 {
+    grid-area: grid-3;
+}
+.grid-2 {
+    grid-area: grid-2;
+}
+.grid-1 {
+    grid-area: grid-1;
+}
+.grid-0 {
+    grid-area: grid-0;
+}
+.grid-add {
+    grid-area: grid-add;
+}
+.grid-sub {
+    grid-area: grid-sub;
+}
+.grid-mul {
+    grid-area: grid-mul;
+}
+.grid-div {
+    grid-area: grid-div;
+}
+.grid-eql {
+    grid-area: grid-eql;
+    color: white;
+    background-color: rgb(67, 151, 151);
+    border: outset;
+    border-color: rgb(42, 65, 65);
+    border-width: 1px;
+}
+.grid-dec {
+    grid-area: grid-dec;
 }
