--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,16 @@
 
 .grid-container {
     background-color: rgb(6, 224, 224);
+    border: 3px solid rgb(57, 167, 167);
     border-radius: 20px;
+    filter: drop-shadow(3px 3px 3px #333) drop-shadow(1px 1px 0 #555);
     padding: 20px;
     margin: 10px auto;
     max-width: 400px;
     display: grid;
     justify-items: center;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-rows: 50px 50px repeat(5, 1fr);
     grid-row-gap: 8px;
     grid-template-areas:
         "grid-dis grid-dis grid-dis grid-dis"
@@ -27,11 +29,13 @@
 .button {
     height: 80px;
     width: 90px;
-    font-size: 2.5em;
+    font-size: 2.25em;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
     color: rgb(39, 38, 38);
     border-width: 1px;
+    filter: drop-shadow(1px 1px 0 #555);
+    background-color: #eee;
 }
 
 .grid-dis {
@@ -41,8 +45,9 @@
     justify-content: right;
     align-items: center;
     padding: 20px;
-    font-size: 64px;
+    font-size: 48px;
     background-color: black;
+    border: 3px solid #666;
     border-radius: 10px;
     color: rgb(198, 221, 221);
     font-family: 'Space Mono', monospace;
@@ -110,7 +115,7 @@
     border-width: 1px;
 }
 .operator-button {
-    background-color: rgb(155, 155, 155);
+    background-color: grey;
     color: white;
 }
 .grid-dec {
