Added operator highlighting and fixed an edge case where concurrent operators caused unwanted behavior

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,11 @@
     background-color: #eee;
 }
 
+button.current-operator {
+    border: none;
+    color: gold;
+}
+
 .grid-dis {
     grid-area: grid-dis;
     display: flex;
