--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ button.current-operator {
     align-items: center;
     padding: 20px;
     font-size: 48px;
-    background-color: black;
+    background-color: #333;
     border: 3px solid #666;
     border-radius: 10px;
     color: rgb(198, 221, 221);
